CorePackage/main/default/objects/Account/fields/aNumber__c.field-meta.xml
<CustomField>
    <fullName>aNumber__c</fullName>
    <label>aNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>