CorePackage/main/default/objects/Account/fields/Cohort__c.field-meta.xml
<CustomField>
    <fullName>Cohort__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cohort of the Hero User</description>
    <label>Cohort</label>
    <referenceTo>Cohort__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>