CorePackage/main/default/objects/Account/fields/Curriculum__c.field-meta.xml
<CustomField>
    <fullName>Curriculum__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Curriculum of the Hero</description>
    <label>Curriculum</label>
    <referenceTo>Curriculum__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>