CorePackage/main/default/objects/Account/fields/Squad__c.field-meta.xml
<CustomField>
    <fullName>Squad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The squad of the hero from The Trial of The Titans</description>
    <label>Squad</label>
    <referenceTo>Squad__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>