CorePackage/main/default/objects/Account/recordTypes/Hero.recordType-meta.xml
<RecordType>
    <fullName>Hero</fullName>
    <active>true</active>
    <description>The record type for the Hero Account</description>
    <label>Hero</label>
</RecordType>