CorePackage/main/default/objects/Account/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Team__c</columns>
    <columns>Squad__c</columns>
    <columns>Cohort__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>